@@ -1,4 +1,9 @@
 2006-05-23 Kurt Maute <Kurt@Maute.us>
+	* src/planner-window.c
+
+	Updated About box info:  Added self as maintainer, removed Imendio from name.
+
+2006-05-23 Kurt Maute <Kurt@Maute.us>
 	* docs/user-guide/C/planner.xml
 
 	Updated user guide
